# docs-cds-rdm

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/worflows/: tests.yml
.github/workflows/: deploy.yml  tests.yml
docs/: faq.md  glossary.md  index.md
docs/communities/: communities.md  manage.md  submit.md
docs/deposit/: access-share.md  published-records.md  repositories.md  restrict-share.md  upload.md  uploads.md
docs/reference/: reference.md
docs/review/: comments.md  review.md
docs/search/: search.md
docs/stylesheets/: extra.css
