[project]
name = "docs-cds-rdm"
version = "1.0.0"
description = "CDS (CERN Document Server) documentation website"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["mkdocs", "documentation", "cds", "cern"]
authors = [
    {name = "CERN"}
]

dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.6.22",
]

[project.urls]
Homepage = "https://repository.cern"
Documentation = "https://repository.cern"
Repository = ""
